- fixed clipping issure on parallexls

--- a/src/public/assets/styles/_parallels.scss
+++ b/src/public/assets/styles/_parallels.scss
@@ -44,7 +44,7 @@ $arrow-box-point-offset-y: 0;
   lost-center: 100%;
   position: absolute;
   width: 100%;
-
+  z-index: 100;
   .wipe-slider {
     color: $black-off;
   }
